--- a/docs/ReatMetric System Manual.adoc
+++ b/docs/ReatMetric System Manual.adoc
@@ -315,6 +315,9 @@ include::../eu.dariolucia.reatmetric.driver.spacecraft/Documentation.adoc[]
 === Serial
 include::../eu.dariolucia.reatmetric.driver.serial/Documentation.adoc[]
 
+=== Serial
+include::../eu.dariolucia.reatmetric.driver.snmp/Documentation.adoc[]
+
 == User Interface
 include::../eu.dariolucia.reatmetric.ui/Documentation.adoc[]
 
