--- a/docs/ReatMetric System Manual.adoc
+++ b/docs/ReatMetric System Manual.adoc
@@ -1,13 +1,13 @@
 = System Manual
 Dario Lucia <dario.lucia@gmail.com>
-v1.0.1, 2024-05-20
+v1.0.2, 2024-07-11
 :title-logo-image: image:docimg/ReatMetric-Logo.png[top=42%,align=left,pdfwidth=6in]
 :doctype: book
 :toc:
 :homepage: https://github.com/dariol83/reatmetric
 
 == Applicable Version
-This manual described the design, behaviour and configuration of ReatMetric version 1.0.x.
+This manual described the design, behaviour and configuration of ReatMetric version 1.0.2.
 
 == System Overview
 ReatMetric is a Java-based software infrastructure for the implementation of Monitoring & Control (M&C) systems,
@@ -315,7 +315,7 @@ include::../eu.dariolucia.reatmetric.driver.spacecraft/Documentation.adoc[]
 === Serial
 include::../eu.dariolucia.reatmetric.driver.serial/Documentation.adoc[]
 
-=== Serial
+=== SNMP
 include::../eu.dariolucia.reatmetric.driver.snmp/Documentation.adoc[]
 
 == User Interface
